--- a/index.html
+++ b/index.html
@@ -4,30 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../demo.github.io/css/grid.css">  
+    <link rel="stylesheet" href="https://zaida156.github.io/demo.github.io/css/grid.css">  
     <title>Document</title>
 </head>
 <body>
-    <section>
+    <header>
         <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        left
-                    </div>
-                    <div class="col-md-6">
-                        right
-                    </div>
+            <div class="row">
+                <div class="col-xs-12 col-md-12">
+                   <h1>jjjjjjjjj</h1> 
+                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta obcaecati voluptate omnis incidunt? Labore dolorum, animi quasi temporibus quia deserunt!</p>
                 </div>
             </div>
-</section>
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4"></div>
-            <div class="col-md-4"></div>
-            <div class="col-md-4"></div>
         </div>
-    </div>
-</footer>
+    </header>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-8">
+                    <h2>penguin zoo</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quos saepe animi libero optio. Est corrupti dolor eos fuga ut.</p>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-col-md-4">
+                        <div class="thumbnail"><img src="https://unsplash.it/200" alt=""></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-md-4">
+                    <div class="thumbnail"><img src="https://unsplash.it/200" alt=""></div>
+                </div>
+                <div class="col-xs-12 col-md-4"></div>
+                <div class="col-xs-12 col-md-4"></div>
+            </div>
+        </div>
+    </section>
+    
 </body>
 </html>
